--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXTAUTH_SECRET="fsf]['/'\hldfsha83462343csf/.,fsaf/,\saf"
 NEXTAUTH_URL="http://localhost:3000/"
-"
+CONNECTION_STRING="mongodb+srv://calendly:calendly321@calendlycluster.feruwp8.mongodb.net/?retryWrites=true&w=majority&appName=calendlycluster"
