--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "mongodb": "^6.5.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
