fixed prisma error

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-NEXTAUTH_SECRET="fsf]['/'\hldfsha83462343csf/.,fsaf/,\saf"
-NEXTAUTH_URL="http://localhost:3000/auth/signin"
+NEXTAUTH_SECRET="nextauthsecretcalendly"
+NEXTAUTH_URL="http://localhost:3000"
 
 
 DATABASE_URL="mongodb+srv://ijjazahmad705:calendly321@calendlycluster.feruwp8.mongodb.net/calendlydata?retryWrites=true&w=majority&appName=calendlycluster"
+
+API_URL="http://localhost:3000"
